/pm direct message cmd implementation